--- a/productos.html
+++ b/productos.html
@@ -34,7 +34,7 @@
           <nav id="menu">
             <ul>
               <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
-              <li><a href="#easycharge">¿Quienes somos?</a></li>
+              <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
               <li><a href="#contacto">Contactanos</a></li>
@@ -44,59 +44,71 @@
       </header>
 
       <section id="inicio">
-        <div class="slider separator_bottom gradiant">
+        <div class="slider small gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Somos Easy Charge.</span>
-                    No te preocupes, quedarte sin batería es cosa del pasado.
+                    <span>Productos</span>
                   </h1>
-                  <div class="cont_btn">
-                    <a href="#easycharge" class="btn">Conoce más</a>
-                  </div>
-                </div>
-                <div class="img">
-                  <img src="img/product.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
           </div>
-          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
-          </a>
         </div>
       </section>
 
-      <section id="easycharge">
+      <section id="productos">
         <div class="container">
-          <div class="flex_content_doble easycharge">
-            <div class="right">
-              <div class="logo_circulo">
-                <img src="img/logo-full.svg" alt="">
-              </div>
+            <div class="col-md-12">
+                <div class="list-product">
+                  <div class="group-product">
+                    <h3 class="title">De mesa</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/mesa-1.png" alt="">
+                        <span>Equipo de carga para 6 Power Banks</span>
+                      </div>
+                      <div class="product">
+                        <img src="img/products/mesa-2.png" alt="">
+                        <span>Equipo de carga para 12 Power Banks</span>
+                      </div>
+                      <div class="product">
+                        <img src="img/products/mesa-3.png" alt="">
+                        <span>Cargador con pantalla</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">De pared</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/pared-1.png" alt="">
+                        <span>Equipo de carga para pared de 8 salidas</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">Lockers</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/lockers-1.png" alt="">
+                        <span>Locker de carga de 8 celdas</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">Kiosco</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/kiosko-1.png" alt="">
+                        <span>Kiosco de carga de 12 salidas</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
-            <div class="left">
-              <h2>¿Quienes somos?</h2>
-              <p>Easy Charge importa y distribuye de forma exclusiva, productos que brindan soluciones de carga diseñados para mejorar la
-              forma en que las personas cargan sus dispositivos móviles. Al mezclar el buen diseño con la practicidad, los problemas cotidianos
-              se resuelven de manera elegante y eficiente. Las soluciones de carga de Easy Charge potencian la tecnología que nos conecta
-              con las personas, las actividades y las experiencias que todos tanto amamos.</p>
-            </div>
-          </div>
-          <div class="flex_content_doble publicidad">
-            <div class="right">
-              <h2>¿Por que Easy Charge?</h2>
-              <p>Los beneficios que obtendrá las empresas con los equipos EasyCharge serán los de proveer a sus clientes de un servicio diferencial
-              de carga, satisfaciendo una necesidad que se ha convertido en básica en los últimos años. Ya sea mientras se encuentran en
-              un restaurante, gimnasio, centro de salud, spa, shopping, hotel u otro tipo de establecimientos.</p>
-            </div>
-            <div class="left">
-              <img src="img/icon/publicity.svg" alt="">
-            </div>
-          </div>
         </div>
       </section>
 
