--- a/6-power-bank.html
+++ b/6-power-bank.html
@@ -34,7 +34,7 @@
           <nav id="menu">
             <ul>
               <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
-              <li><a href="#easycharge">¿Quienes somos?</a></li>
+              <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
               <li><a href="#contacto">Contactanos</a></li>
@@ -44,59 +44,119 @@
       </header>
 
       <section id="inicio">
-        <div class="slider separator_bottom gradiant">
+        <div class="slider small gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Somos Easy Charge.</span>
-                    No te preocupes, quedarte sin batería es cosa del pasado.
+                    <span>6 Power Banks</span>
                   </h1>
-                  <div class="cont_btn">
-                    <a href="#easycharge" class="btn">Conoce más</a>
-                  </div>
-                </div>
-                <div class="img">
-                  <img src="img/product.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
           </div>
-          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
-          </a>
         </div>
       </section>
 
-      <section id="easycharge">
+      <section id="productos">
         <div class="container">
-          <div class="flex_content_doble easycharge">
-            <div class="right">
-              <div class="logo_circulo">
-                <img src="img/logo-full.svg" alt="">
-              </div>
+            <div class="col-md-12">
+                <div class="detail-product">
+                    <div class="product-img">
+                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                    </div>
+                    <div class="product-description">
+                        <h2>6 Power Banks</h2>
+                        <p>Perfecto para:</p>
+                        <ul>
+                          <li>Casinos  Cafes  Restaurants</li>
+                          <li>Bares  Resorts</li>
+                          <li>Clubes nocturnos</li>
+                          <li>Clubes de Golf</li>
+                        </ul>
+                        <div class="content-photos-products">
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Publicidad Customizable</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Box para cambio de cables: Limpio y Ordenado</p>
+                            </div>
+                          </div>
+                        </div>
+                        <ul class="list-description">
+                            <li>
+                                <p>
+                                  <b>Dimensiones:</b>
+                                  260 x 230 x 160mm
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                  <b>Salida de energia:</b>
+                                  5V/ 1.5A
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                  <b>Cantidad de Power Banks:</b>
+                                  6 PCS
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                  <b>Capacidad de Batería:</b>
+                                  5000mAh
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                  <b>Cables de Carga:</b>
+                                </p>
+                                <ul>
+                                  <li>
+                                    <img src="img/icon/usb-1.jpg" alt="">
+                                    Micro USB Cable x 2
+                                  </li>
+                                  <li>
+                                    <img src="img/icon/apple-l.jpg" alt="">
+                                    Apple MFi Lightning Cable x 1
+                                  </li>
+                                  <li>
+                                    <img src="img/icon/usb-c.jpg" alt="">
+                                    USB Type C Cable x 1
+                                  </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="left">
-              <h2>¿Quienes somos?</h2>
-              <p>Easy Charge importa y distribuye de forma exclusiva, productos que brindan soluciones de carga diseñados para mejorar la
-              forma en que las personas cargan sus dispositivos móviles. Al mezclar el buen diseño con la practicidad, los problemas cotidianos
-              se resuelven de manera elegante y eficiente. Las soluciones de carga de Easy Charge potencian la tecnología que nos conecta
-              con las personas, las actividades y las experiencias que todos tanto amamos.</p>
-            </div>
-          </div>
-          <div class="flex_content_doble publicidad">
-            <div class="right">
-              <h2>¿Por que Easy Charge?</h2>
-              <p>Los beneficios que obtendrá las empresas con los equipos EasyCharge serán los de proveer a sus clientes de un servicio diferencial
-              de carga, satisfaciendo una necesidad que se ha convertido en básica en los últimos años. Ya sea mientras se encuentran en
-              un restaurante, gimnasio, centro de salud, spa, shopping, hotel u otro tipo de establecimientos.</p>
-            </div>
-            <div class="left">
-              <img src="img/icon/publicity.svg" alt="">
-            </div>
-          </div>
         </div>
       </section>
 
@@ -156,16 +216,16 @@
                       </select>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="name" placeholder="Nombre" required >
+                      <input type="text" class="form-control" id="name" placeholder="Nombre" required>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required >
+                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required>
                     </div>
                     <div class="form-group">
-                      <input type="email" class="form-control" id="mail" placeholder="Email" required >
+                      <input type="email" class="form-control" id="mail" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required ></textarea>
+                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required></textarea>
                     </div>
                     <div class="form-group">
                       <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
