--- a/productos.html
+++ b/productos.html
@@ -68,15 +68,15 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/mesa-1.png" alt="">
-                        <span>Equipo de carga para 6 Power Banks</span>
+                        <p><a href="6-power-bank.html">Equipo de carga para 6 Power Banks</a></p>
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-2.png" alt="">
-                        <span>Equipo de carga para 12 Power Banks</span>
+                        <p><a href="#">Equipo de carga para 12 Power Banks</a></p>
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-3.png" alt="">
-                        <span>Cargador con pantalla</span>
+                        <p><a href="#">Cargador con pantalla</a></p>
                       </div>
                     </div>
                   </div>
@@ -85,7 +85,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/pared-1.png" alt="">
-                        <span>Equipo de carga para pared de 8 salidas</span>
+                        <p><a href="#">Equipo de carga para pared de 8 salidas</a></p>
                       </div>
                     </div>
                   </div>
@@ -94,7 +94,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/lockers-1.png" alt="">
-                        <span>Locker de carga de 8 celdas</span>
+                        <p><a href="#">Locker de carga de 8 celdas</a></p>
                       </div>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/kiosko-1.png" alt="">
-                        <span>Kiosco de carga de 12 salidas</span>
+                        <p><a href="#">Kiosco de carga de 12 salidas</a></p>
                       </div>
                     </div>
                   </div>
@@ -158,17 +158,26 @@
                 <div class="right">
                   <form>
                     <h3>Contactanos</h3>
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="name" placeholder="Nombre" required >
+                    <div class="form-group select-content">
+                      <p>Motivo del contacto</p>
+                      <select value="motivo" id="motivo">
+                        <option name="compra">Compra</option>
+                        <option name="alquiler">Alquiler</option>
+                        <option name="eventos">Eventos</option>
+                        <option name="publicita">Publicita</option>
+                      </select>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required >
+                      <input type="text" class="form-control" id="name" placeholder="Nombre" required>
                     </div>
                     <div class="form-group">
-                      <input type="email" class="form-control" id="mail" placeholder="Email" required >
+                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required>
                     </div>
                     <div class="form-group">
-                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required ></textarea>
+                      <input type="email" class="form-control" id="mail" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required></textarea>
                     </div>
                     <div class="form-group">
                       <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
