--- a/servicios.html
+++ b/servicios.html
@@ -44,28 +44,18 @@
       </header>
 
       <section id="inicio">
-        <div class="slider separator_bottom gradiant">
+        <div class="slider small gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
-                <div class="txt">                  
+                <div class="txt">
                   <h1>
-                    <span>SERVICIOS</span>
+                    <span>Servicios</span>
                   </h1>
-                  <div class="cont_btn">
-                    <a href="#primer_contenido" class="btn">Conoce más</a>
-                  </div>
-                </div>
-                <div class="img">
-                  <img src="img/product.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
           </div>
-          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
-          </a>
         </div>
       </section>
 
@@ -84,7 +74,7 @@
                 <div class="tab active" id="one">
                   <div class="quote_text">
                     <h2>Alquiler</h2>
-                    Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipos que se considere necesario, exhibiendo
+                    Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipos portatiles con pantalla que se considere necesario, exhibiendo
                     en los mismos lo que el negocio desee: menú, ofertas y públicidades.
                   </div>
                   <div class="flex_container_description">
@@ -140,7 +130,7 @@
                 <div class="tab" id="two">
                   <div class="quote_text">
                     <h2>Eventos</h2>
-                    Consiste en brindar en modalidad de arrendamiento para un evento, fiesta o conferencia la cantidad de equipos que se considere
+                    Consiste en brindar en modalidad de arrendamiento para un evento, fiesta o conferencia la cantidad de equipos portatiles con pantalla que se considere
                     necesario, exhibiendo en las pantallas el contenido que se desee
                   </div>
                   <div class="flex_container_description">
@@ -195,7 +185,7 @@
                   <div class="quote_text">
                     <h2>Anunciate con nosotros</h2>
                     Easy Charge es un dispositivo moderno y práctico donde publicitar. Tu marca, producto y/o servicio se exhibirá en la pantalla
-                    de los equipos Easy Charge en bares, restaurantes, centros de estética, gimnasios y otros establecimientos de primer nivel
+                    de los equipos Easy Charge en bares, restaurantes, centros de estética, gimnasios y otros establecimientos aliados de primer nivel
                     en el Uruguay. Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público.
                   </div>
                   <div class="flex_container_description">
@@ -330,17 +320,26 @@
                 <div class="right">
                   <form>
                     <h3>Contactanos</h3>
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="name" placeholder="Nombre" required >
+                    <div class="form-group select-content">
+                      <p>Motivo del contacto</p>
+                      <select value="motivo" id="motivo">
+                        <option name="compra">Compra</option>
+                        <option name="alquiler">Alquiler</option>
+                        <option name="eventos">Eventos</option>
+                        <option name="publicita">Publicita</option>
+                      </select>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required >
+                      <input type="text" class="form-control" id="name" placeholder="Nombre" required>
                     </div>
                     <div class="form-group">
-                      <input type="email" class="form-control" id="mail" placeholder="Email" required >
+                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required>
                     </div>
                     <div class="form-group">
-                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required ></textarea>
+                      <input type="email" class="form-control" id="mail" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required></textarea>
                     </div>
                     <div class="form-group">
                       <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
