--- a/8-lockers.html
+++ b/8-lockers.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>6 Power Banks</span>
+                    <span>Productos</span>
                   </h1>
                 </div>
               </div>
@@ -62,99 +62,51 @@
       <section id="productos">
         <div class="container">
             <div class="col-md-12">
-                <div class="detail-product">
-                    <div class="product-img">
-                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                <div class="list-product">
+                  <div class="group-product">
+                    <h3 class="title">De mesa</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/mesa-1.png" alt="">
+                        <p><a href="6-power-bank.html">Equipo de carga para 6 Power Banks</a></p>
+                      </div>
+                      <div class="product">
+                        <img src="img/products/mesa-2.png" alt="">
+                        <p><a href="#">Equipo de carga para 12 Power Banks</a></p>
+                      </div>
+                      <div class="product">
+                        <img src="img/products/mesa-3.png" alt="">
+                        <p><a href="#">Cargador con pantalla</a></p>
+                      </div>
                     </div>
-                    <div class="product-description">
-                        <h2>6 Power Banks</h2>
-                        <p>Perfecto para:</p>
-                        <ul class="list-description">
-                          <li>Casinos  Cafes  Restaurants</li>
-                          <li>Bares  Resorts</li>
-                          <li>Clubes nocturnos</li>
-                          <li>Clubes de Golf</li>
-                        </ul>
-                        <div class="content-photos-products">
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Publicidad Customizable</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-4.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Box para cambio de cables: Limpio y Ordenado</p>
-                            </div>
-                          </div>
-                        </div>
-                        <ul class="list-description">
-                            <li>
-                                <p>
-                                  <b>Dimensiones:</b>
-                                  260 x 230 x 160mm
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Salida de energia:</b>
-                                  5V/ 1.5A
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cantidad de Power Banks:</b>
-                                  6 PCS
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Capacidad de Batería:</b>
-                                  5000mAh
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cables de Carga:</b>
-                                </p>
-                                <ul class="list-connection">
-                                  <li>
-                                    <img src="img/icon/usb-1.jpg" alt="">
-                                    Micro USB Cable x 2
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-l.jpg" alt="">
-                                    Apple MFi Lightning Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/usb-c.jpg" alt="">
-                                    USB Type C Cable x 1
-                                  </li>
-                                </ul>
-                            </li>
-                        </ul>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">De pared</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/pared-1.png" alt="">
+                        <p><a href="#">Equipo de carga para pared de 8 salidas</a></p>
+                      </div>
                     </div>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">Lockers</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/lockers-1.png" alt="">
+                        <p><a href="#">Locker de carga de 8 celdas</a></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group-product">
+                    <h3 class="title">Kiosco</h3>
+                    <div class="grid-product">
+                      <div class="product">
+                        <img src="img/products/kiosko-1.png" alt="">
+                        <p><a href="#">Kiosco de carga de 12 salidas</a></p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
