links nuevos templates

--- a/productos.html
+++ b/productos.html
@@ -72,11 +72,11 @@
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-2.png" alt="">
-                        <p><a href="#">Equipo de carga para 12 Power Banks</a></p>
+                        <p><a href="12-power-bank.html">Equipo de carga para 12 Power Banks</a></p>
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-3.png" alt="">
-                        <p><a href="#">Cargador con pantalla</a></p>
+                        <p><a href="easy-charge.html">Cargador con pantalla</a></p>
                       </div>
                     </div>
                   </div>
@@ -85,7 +85,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/pared-1.png" alt="">
-                        <p><a href="#">Equipo de carga para pared de 8 salidas</a></p>
+                        <p><a href="8-salidas.html">Equipo de carga para pared de 8 salidas</a></p>
                       </div>
                     </div>
                   </div>
@@ -94,7 +94,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/lockers-1.png" alt="">
-                        <p><a href="#">Locker de carga de 8 celdas</a></p>
+                        <p><a href="8-lockers.html">Locker de carga de 8 celdas</a></p>
                       </div>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/kiosko-1.png" alt="">
-                        <p><a href="#">Kiosco de carga de 12 salidas</a></p>
+                        <p><a href="12-kiosco.html">Kiosco de carga de 12 salidas</a></p>
                       </div>
                     </div>
                   </div>
