nuevos templates e imagene

--- a/mesa-1.html
+++ b/mesa-1.html
@@ -70,8 +70,11 @@
                         <h2>6 Power Banks</h2>
                         <p>Perfecto para:</p>
                         <ul class="list-description">
-                          <li>Casinos  Cafes  Restaurants</li>
-                          <li>Bares  Resorts</li>
+                          <li>Casinos</li>
+                          <li>Cafes</li>
+                          <li>Restaurants</li>
+                          <li>Bares</li>
+                          <li>Resorts</li>
                           <li>Clubes nocturnos</li>
                           <li>Clubes de Golf</li>
                         </ul>
