--- a/productos.html
+++ b/productos.html
@@ -68,15 +68,15 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/mesa-1.png" alt="">
-                        <p><a href="6-power-bank.html">Equipo de carga para 6 Power Banks</a></p>
+                        <p><a href="mesa-1.html">Equipo de carga para 6 Power Banks</a></p>
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-2.png" alt="">
-                        <p><a href="12-power-bank.html">Equipo de carga para 12 Power Banks</a></p>
+                        <p><a href="mesa-2.html">Equipo de carga para 12 Power Banks</a></p>
                       </div>
                       <div class="product">
                         <img src="img/products/mesa-3.png" alt="">
-                        <p><a href="easy-charge.html">Cargador con pantalla</a></p>
+                        <p><a href="mesa-3.html">Cargador con pantalla</a></p>
                       </div>
                     </div>
                   </div>
@@ -85,7 +85,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/pared-1.png" alt="">
-                        <p><a href="8-salidas.html">Equipo de carga para pared de 8 salidas</a></p>
+                        <p><a href="pared-1.html">Equipo de carga para pared de 8 salidas</a></p>
                       </div>
                     </div>
                   </div>
@@ -94,7 +94,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/lockers-1.png" alt="">
-                        <p><a href="8-lockers.html">Locker de carga de 8 celdas</a></p>
+                        <p><a href="lockers-1.html">Locker de carga de 8 celdas</a></p>
                       </div>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                     <div class="grid-product">
                       <div class="product">
                         <img src="img/products/kiosko-1.png" alt="">
-                        <p><a href="12-kiosco.html">Kiosco de carga de 12 salidas</a></p>
+                        <p><a href="kiosco-1.html">Kiosco de carga de 12 salidas</a></p>
                       </div>
                     </div>
                   </div>
