--- a/kiosco-1.html
+++ b/kiosco-1.html
@@ -64,14 +64,17 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                        <img src="img/products/kiosko-1.png" alt="6 Power Banks" class="img-responsive">
                     </div>
                     <div class="product-description">
                         <h2>6 Power Banks</h2>
                         <p>Perfecto para:</p>
                         <ul class="list-description">
-                          <li>Casinos  Cafes  Restaurants</li>
-                          <li>Bares  Resorts</li>
+                          <li>Casinos</li>
+                          <li>Cafes</li>
+                          <li>Restaurants</li>
+                          <li>Bares</li>
+                          <li>Resorts</li>
                           <li>Clubes nocturnos</li>
                           <li>Clubes de Golf</li>
                         </ul>
