--- a/mesa-2.html
+++ b/mesa-2.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>6 Power Banks</span>
+                    <span>12 Power Banks</span>
                   </h1>
                 </div>
               </div>
@@ -64,16 +64,15 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                        <img src="img/products/mesa-2.png" alt="12 Power Banks" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>6 Power Banks</h2>
+                        <h2>12 Power Banks</h2>
                         <p>Perfecto para:</p>
                         <ul class="list-description">
-                          <li>Casinos  Cafes  Restaurants</li>
-                          <li>Bares  Resorts</li>
-                          <li>Clubes nocturnos</li>
-                          <li>Clubes de Golf</li>
+                          <li>Restaurants</li>
+                          <li>Cafes</li>
+                          <li>Bares</li>
                         </ul>
                         <div class="content-photos-products">
                           <div class="photos-products">
@@ -81,12 +80,28 @@
                               <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Publicidad Customizable</p>
+                              <p>Carga 2 dispositivos simultáneamente</p>
                             </div>
                           </div>
                           <div class="photos-products">
                             <div class="photo">
                               <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Cable trenzado</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>Publicidad Customizable</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>Mantenga a sus clientes con carga mientras se divierten</p>
@@ -97,29 +112,27 @@
                               <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-4.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Box para cambio de cables: Limpio y Ordenado</p>
+                              <p>Doce espacios de carga de Power Bank: Carga hasta 12 Power Banks al mismo tiempo</p>
                             </div>
                           </div>
                         </div>
                         <ul class="list-description">
                             <li>
                                 <p>
-                                  <b>Dimensiones:</b>
-                                  260 x 230 x 160mm
+                                  <b>Dimensiones del Power Bank:</b>
+                                  85 x 170 x 24mm
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                  <b>Dimensiones de la estación:</b>
+                                  240 x 317 x 180mm
                                 </p>
                             </li>
                             <li>
                                 <p>
                                   <b>Salida de energia:</b>
-                                  5V/ 1.5A
+                                  5V/ 1.0A x2
                                 </p>
                             </li>
                             <li>
