--- a/pared-1.html
+++ b/pared-1.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>6 Power Banks</span>
+                    <span>Power Bank de pared 8 dispositivos</span>
                   </h1>
                 </div>
               </div>
@@ -64,16 +64,16 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                        <img src="img/products/pared-1.png" alt="Power Bank de pared 8 dispositivos" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>6 Power Banks</h2>
+                        <h2>Power Bank de pared 8 dispositivos</h2>
                         <p>Perfecto para:</p>
                         <ul class="list-description">
-                          <li>Casinos  Cafes  Restaurants</li>
-                          <li>Bares  Resorts</li>
-                          <li>Clubes nocturnos</li>
-                          <li>Clubes de Golf</li>
+                          <li>Lobbies de Hoteles</li>
+                          <li>Areas de espera</li>
+                          <li>Exhibiciones</li>
+                          <li>Eventos</li>
                         </ul>
                         <div class="content-photos-products">
                           <div class="photos-products">
@@ -86,26 +86,10 @@
                           </div>
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                              <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-4.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Box para cambio de cables: Limpio y Ordenado</p>
+                              <p>Permite cargar 8 dispositivos simultáneos.</p>
                             </div>
                           </div>
                         </div>
@@ -113,25 +97,13 @@
                             <li>
                                 <p>
                                   <b>Dimensiones:</b>
-                                  260 x 230 x 160mm
+                                  1310 x 480 x 285 mm
                                 </p>
                             </li>
                             <li>
                                 <p>
                                   <b>Salida de energia:</b>
-                                  5V/ 1.5A
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cantidad de Power Banks:</b>
-                                  6 PCS
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Capacidad de Batería:</b>
-                                  5000mAh
+                                  5V/ 1.5A x8
                                 </p>
                             </li>
                             <li>
@@ -146,6 +118,10 @@
                                   <li>
                                     <img src="img/icon/apple-l.jpg" alt="">
                                     Apple MFi Lightning Cable x 1
+                                  </li>
+                                  <li>
+                                    <img src="img/icon/apple-large.jpg" alt="">
+                                    Apple Cable Cable x 1
                                   </li>
                                   <li>
                                     <img src="img/icon/usb-c.jpg" alt="">
