--- a/kiosco-1.html
+++ b/kiosco-1.html
@@ -81,7 +81,7 @@
                         <div class="content-photos-products">
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
+                              <img src="img/products/mesa-1/design.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>Publicidad Customizable</p>
@@ -97,7 +97,7 @@
                           </div>
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
+                              <img src="img/products/features/" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
@@ -105,7 +105,7 @@
                           </div>
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/6-power-banks/promo-4.jpg" alt="" class="img-responsive">
+                              <img src="img/products/mesa-1/cables.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>Box para cambio de cables: Limpio y Ordenado</p>
