added section slider services

--- a/mesa-3.html
+++ b/mesa-3.html
@@ -93,7 +93,7 @@
             <div class="content-photos-products">
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
+                  <img src="img/products/mesa-3/player.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y video (MP4, WMV, MOV y AVI)</p>
@@ -101,7 +101,7 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                  <img src="img/products/mesa-3/cables.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Cable trenzado</p>
@@ -109,7 +109,7 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
+                  <img src="img/products/mesa-3/ads.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Publicidad Customizable</p>
@@ -117,7 +117,7 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
+                  <img src="img/products/features/meeting.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Mantenga a sus clientes con carga mientras se divierten</p>
@@ -125,7 +125,7 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
+                  <img src="img/products/mesa-3/charger.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Permite recargar hasta 8 smartphones y dispositivos móviles a la vez.</p>
