--- a/servicios.html
+++ b/servicios.html
@@ -44,23 +44,37 @@
       </header>
 
       <section id="inicio">
-        <div class="slider small gradiant">
+        <div class="slider separator_bottom gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
                 <div class="txt">
                   <h1>
-                    <span>Servicios</span>
+                    <span>Easy Charge está en todas</span>
                   </h1>
+                  <div class="cont_btn">
+                    <a href="#tabs-information" class="btn">Conoce más</a>
+                  </div>
+                </div>
+                <div class="img">
+                  <img src="img/product.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
           </div>
+          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
+          <a href="#" class="arrow_down">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2"
+              enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve">
+              <polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "
+              />
+            </svg>
+          </a>
         </div>
       </section>
 
       <section>
-        <div class="container">
+        <div class="container" id="tabs-information">
           <div class="col-md-12">
             <div class="tabs-content">
               <div class="tabs-list">
